--- a/index.html
+++ b/index.html
@@ -105,12 +105,10 @@
 	<footer class="section-full">
 		<div class="container">
 			<div class="footer-bottom d-flex justify-content-between align-items-center">
-				<p class="footer-text m-0">Copyright &copy; 2017 | All rights reserved to <a href="#">Datarc inc.</a> Designed by <a href="https://colorlib.com/wp">Colorlib</a>.</p>
+				<p class="footer-text m-0">Copyright &copy; 2018 | <a href="https://sweassociation.in">SWEA</a></p>
 				<div class="footer-social d-flex align-items-center">
 					<a href="#"><i class="fa fa-facebook"></i></a>
 					<a href="#"><i class="fa fa-twitter"></i></a>
-					<a href="#"><i class="fa fa-dribbble"></i></a>
-					<a href="#"><i class="fa fa-behance"></i></a>
 				</div>
 			</div>
 		</div>
