about basic and removed unnecessary plugins

--- a/about.html
+++ b/about.html
@@ -42,8 +42,8 @@
 					<div class="right-bar d-flex align-items-center">
 						<nav class="d-flex align-items-center">
 							<ul class="main-menu">
-								<li><a href="./index.html">Home</a></li>
-								<li><a href="./about.html">About</a></li>
+								<li><a href="index.html">Home</a></li>
+								<li><a href="about.html">About</a></li>
 								<li><a href="#protfolio">Speakers</a></li>
 								<li><a href="#protfolio">Registration</a></li>
 								<li><a href="#protfolio">Publication</a></li>
@@ -71,33 +71,13 @@
 	</header>
 	<!-- End Header Area -->
 
-	<!-- Start Banner Area -->
-	<section class="banner-area relative">
-		<div class="overlay overlay-bg"></div>
-		<div class="container">
-			<div class="row fullscreen justify-content-center align-items-center">
-				<div class="col-lg-8">
-					<div class="banner-content text-center">
-						<h4 class="text-white banner-full">International Conference on Artificial Intelligence and Evolutionary Computations in Engineering Systems</h4>
-						<h1 class="text-uppercase text-white banner-short">ICAIECES</h1>
-						<h3 class="text-white banner-date">April 11th - 13th, 2019</h3>
-						<a href="registration.html" class="primary-btn banner-btn">Register</a>
-						<p></p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- End Banner Area -->
-
 	<!-- Start Theme Area -->
-	<section class="section-full gray-bg p-5">
+	<section class="section-full gray-bg partial-p">
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-lg-10">
 					<div class="section-title text-center">
-						<h1 class="text-uppercase">Scope of Conference</h1>
-						<!-- <h3>Plantronics with its GN Netcom <b>wireless headset</b> creates the next generation of wireless headset and other products such as wireless amplifiers, and <b>wireless headset</b> telephone.</h3> -->
+						<h1 class="text-uppercase">About SRM</h1>
 					</div>
 				</div>
 			</div>
