--- a/index.html
+++ b/index.html
@@ -96,16 +96,15 @@
 				<div class="col-lg-10">
 					<div class="section-title text-center">
 						<h1 class="text-uppercase">Scope of Conference</h1>
-						<!-- <h3>Plantronics with its GN Netcom <b>wireless headset</b> creates the next generation of wireless headset and other products such as wireless amplifiers, and <b>wireless headset</b> telephone.</h3> -->
 					</div>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-4">
-					<img src="https://sweassociation.in/images/et.png" class="img-fluid" alt="">
+					<img src="./img/swea.png" class="img-fluid" alt="">
 				</div>
 				<div class="col-md-8">
-					<p class="content-theme">
+					<p class="content-theme-1">
 						This conference is to provide an international forum for industry professionals and researchers to deliberate and state their research findings, discuss the latest advancements and explore the future directions in the emerging areas of Engineering and
 						Technology. The conference also bring together both novice and experienced scientists and developers, to meet new colleagues, collect new ideas and establish new cooperation between research groups and provide a platform for researchers from academic
 						and industry to present their original work and exchange ideas, information, techniques and applications in the field of Software Engineering, networking, Big Data, Cloud Computing, Data Analytics, IOT and other blooming areas of research.
