--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
 	</header>
 	<!-- End Header Area -->
 
-	<!-- Start Theme Area -->
+	<!-- Start SRM About Area -->
 	<section class="section-full gray-bg partial-p">
 		<div class="container">
 			<div class="row justify-content-center">
@@ -82,19 +82,89 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4">
-					<img src="https://sweassociation.in/images/et.png" class="img-fluid" alt="">
+					<img src="./img/tp.jpg" class="img-fluid" alt="">
 				</div>
 				<div class="col-md-8">
-					<p class="content-theme">
-						This conference is to provide an international forum for industry professionals and researchers to deliberate and state their research findings, discuss the latest advancements and explore the future directions in the emerging areas of Engineering and
-						Technology. The conference also bring together both novice and experienced scientists and developers, to meet new colleagues, collect new ideas and establish new cooperation between research groups and provide a platform for researchers from academic
-						and industry to present their original work and exchange ideas, information, techniques and applications in the field of Software Engineering, networking, Big Data, Cloud Computing, Data Analytics, IOT and other blooming areas of research.
+					<p class="content-theme-1">
+						SRM Institute of Science and Technology (SRMIST) is one of the pioneering engineering institutions of INDIA, was established in 1985. It offers a wide range of programs as Undergraduate, Post graduate and Doctoral courses. SRMIST has collaboration with
+						the leading institutions globally to provide a platform and experience international standards in Education and Research to SRM Students & Researchers.
+					</p>
+				</div>
+				<div class="col-md-12 pt-5">
+					<p class="content-theme-2">
+						SRM group of institutions are span across India with 4 main campuses and 7 other groups of institution attracting students both from India and Abroad. Academically SRM offers global faculty members, flexible and dynamic curriculum, exciting research and
+						global connections are features that set SRM apart. SRM frontrunners are their Internal and Corporate Advisory Board who play a key role in formulating academic and research after interaction with faculties and students. <br /><br /> SRMIST
+						research covers all major academic disciplines to establish state of the art multi-disciplinary, inter-disciplinary and co-disciplinary research institute in a dynamic, competitive and vibrant environment. SRMIST has key facilities like Nano Technology
+						research Centre, Centre for Environmental Nuclear Research (CERN), Centre for Advanced Concrete Research (CACR), Interdisciplinary Institute of Indian System of Medicine (IIISM), Earthquake Research Cell, Medical Research Centre, Indian Nodal Bioethics
+						Centre of the UNESCO International Chair on Bioethics, Bioengineering, Multidisciplinary Research, Funded and Undergraduate Research. SRM School of Computing has lab infrastructure is supported by Government, Corporate and In-House labs like Big
+						Data Analytics, Cloud Computing, Internet of Things (IoT), Wireless Networking Lab, Brain Computer Interface Lab, PURA and also collaboration with major corporate giants like NOKIA, CISCO, Microsoft and LDRA.<br /><br /> SRMIST creates a platform
+						to students in connecting with many leading companies for Industrial Training, Internship and Placements by crafting a benchmark in the Placement Track. SRM host various students clubs and social relevant activities for the students to plinth their
+						talent in various areas other than the academics.
 					</p>
 				</div>
 			</div>
 		</div>
 	</section>
-	<!-- End Theme Area -->
+	<!-- End SRM About Area -->
+
+	<!-- Start SWE About Area -->
+	<section class="section-full gray-bg">
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-lg-10">
+					<div class="section-title text-center">
+						<h1 class="text-uppercase">About Software Engineering</h1>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4">
+					<img src="./img/swea.png" class="img-fluid" alt="">
+				</div>
+				<div class="col-md-8">
+					<p class="content-theme-1">
+						The Software Engineering (SWE) is one of the significant specializations in School of Computing. Software Engineering enhances the students to extend, strengthen the ability to develop and sustain the transformative software systems of tomorrow. The department
+						activities is determined to create Future Leaders and Trend Setters for the next generation. This Department offers a Comprehensive Under Graduate course curriculum that prepares the students to be leaders in software Engineering. Department of
+						Software Engineering started offering UG courses from 2008 onwards. Well qualified and experienced faculties form the backbone of the department. Resource persons from various industries are invited to deliver Class Room Sessions, Industry Based
+						Hands-on Activities, Guest Lectures and Seminars related in the curriculum and software industry trending topics.
+					</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- End SWE About Area -->
+
+	<!-- Start Research & Consultancy Area -->
+	<section class="section-full gray-bg">
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-lg-10">
+					<div class="section-title text-center">
+						<h1 class="text-uppercase">Research & Consultancy</h1>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4">
+					<img src="./img/research.png" class="img-fluid" alt="">
+				</div>
+				<div class="col-md-8">
+					<p class="content-theme-2">
+						The Research Division of Software Engineering Department covers various aspects of Computer Vision, Software Process & Engineering, Network Systems & Services and Computing Technologies. The key player for this conference is the Computer Vision research group working in major research fields of Artificial Intelligence, Big Data Analytics, IoT, Machine & Deep Learning, Image Processing, Augmented Reality and Robotics. The Networking Systems and Services group graft on research areas such as Wireless Sensor Networks, Adhoc Networks, VANET and Security. Computing Technologies group concentrates on Data Mining, Analysis and Prediction, Human Computer Interface, Virtual Reality, Brain Computing, Distributed Computing, Social Media Network, Mobile and Pervasive Computing. There is an active and growing area of research in the field Software Engineering as Measurements, Metric, Testing, Verification & Validation and Reliability, whilst collaborating with each other and a variety of industrial partners like LDRA.
+					</p>
+				</div>
+				<div class="col-md-12 pt-5">
+					<div class="section-title text-center">
+						<h1 class="text-uppercase">Industrial connection</h1>
+					</div>
+					<p class="content-theme-2">
+						Software Engineering program interacts and liaises with well-reputed industries to facilitate funded projects, research and consultancy in the chosen areas. The Program  Corporate Advisory Board includes top executives from leading Software Industries such as Amazon, Pyoda, Aricent, McAfee, Capital IQ, NTT data, Ascendas, etc. Industrial partnership with Clockworks Interview was created as MOU.
+					</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- End Research & Consultancy Area -->
 
 	<footer class="section-full">
 		<div class="container">
