removed useless img & added speakers and blank page

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
-	<title>ICAIECES - 2019</title>
+	<title>About : ICAIECES - 2019</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,500,600" rel="stylesheet">
 	<!--
@@ -41,9 +41,9 @@
 					<div class="right-bar d-flex align-items-center">
 						<nav class="d-flex align-items-center">
 							<ul class="main-menu">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="about.html">About</a></li>
-								<li><a href="#protfolio">Speakers</a></li>
+								<li><a href="./index.html">Home</a></li>
+								<li><a href="./about.html">About</a></li>
+								<li><a href="./speakers.html">Speakers</a></li>
 								<li><a href="#protfolio">Registration</a></li>
 								<li><a href="#protfolio">Publication</a></li>
 								<li class="dropdown">
