--- a/blank.html
+++ b/blank.html
@@ -15,7 +15,7 @@
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
-	<title>Home : ICAIECES - 2019</title>
+	<title>Speakers : ICAIECES - 2019</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,500,600" rel="stylesheet">
 	<!--
@@ -70,50 +70,22 @@
 	</header>
 	<!-- End Header Area -->
 
-	<!-- Start Banner Area -->
-	<section class="banner-area relative">
-		<div class="overlay overlay-bg"></div>
-		<div class="container">
-			<div class="row fullscreen justify-content-center align-items-center">
-				<div class="col-lg-8">
-					<div class="banner-content text-center">
-						<h4 class="text-white banner-full">International Conference on Artificial Intelligence and Evolutionary Computations in Engineering Systems</h4>
-						<h1 class="text-uppercase text-white banner-short">ICAIECES</h1>
-						<h3 class="text-white banner-date">April 11th - 13th, 2019</h3>
-						<a href="registration.html" class="primary-btn banner-btn">Register</a>
-						<p></p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- End Banner Area -->
-
-	<!-- Start Theme Area -->
-	<section class="section-full gray-bg p-5">
+	<!-- Start Content Area -->
+	<section class="section-full gray-bg partial-p">
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-lg-10">
 					<div class="section-title text-center">
-						<h1 class="text-uppercase">Scope of Conference</h1>
+						<h1 class="text-uppercase">Blank</h1>
 					</div>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-4">
-					<img src="./img/swea.png" class="img-fluid" alt="">
-				</div>
-				<div class="col-md-8">
-					<p class="content-theme-1">
-						This conference is to provide an international forum for industry professionals and researchers to deliberate and state their research findings, discuss the latest advancements and explore the future directions in the emerging areas of Engineering and
-						Technology. The conference also bring together both novice and experienced scientists and developers, to meet new colleagues, collect new ideas and establish new cooperation between research groups and provide a platform for researchers from academic
-						and industry to present their original work and exchange ideas, information, techniques and applications in the field of Software Engineering, networking, Big Data, Cloud Computing, Data Analytics, IOT and other blooming areas of research.
-					</p>
-				</div>
+				
 			</div>
 		</div>
 	</section>
-	<!-- End Theme Area -->
+	<!-- End Content Area -->
 
 	<footer class="section-full">
 		<div class="container">
