--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 								<li><a href="./index.html">Home</a></li>
 								<li><a href="./about.html">About</a></li>
 								<li><a href="./speakers.html">Speakers</a></li>
-								<li><a href="#protfolio">Registration</a></li>
+								<li><a href="./registration.html">Registration</a></li>
 								<li><a href="#protfolio">Publication</a></li>
 								<li class="dropdown">
 									<a class="dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">More</a>
