added call for paper page

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
 									<a class="dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">More</a>
 									<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 										<a class="dropdown-item" href="#">Paper Submission</a>
-										<a class="dropdown-item" href="#">Call for Papers</a>
+										<a class="dropdown-item" href="./call.html">Call for Papers</a>
 										<a class="dropdown-item" href="#">Committee</a>
 										<div class="dropdown-divider"></div>
 										<a class="dropdown-item" href="#">Venue</a>
