--- a/call.html
+++ b/call.html
@@ -15,7 +15,7 @@
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
-	<title>Speakers : ICAIECES - 2019</title>
+	<title>Call for Papers : ICAIECES - 2019</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,500,600" rel="stylesheet">
 	<!--
@@ -70,22 +70,34 @@
 	</header>
 	<!-- End Header Area -->
 
-	<!-- Start Content Area -->
+	<!-- Start Call Area -->
 	<section class="section-full gray-bg partial-p">
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-lg-10">
 					<div class="section-title text-center">
-						<h1 class="text-uppercase">Blank</h1>
+						<h1 class="text-uppercase">Call for Paper</h1>
 					</div>
 				</div>
 			</div>
-			<div class="row">
-
+			<div class="row justify-content-center">
+				<div class="col-md-12">
+					<h4 class="text-center">
+						Original Contributions are solicited on topics covered under broad areas such as (but not limited to):
+					</h4>
+				</div>
+				<div class="col-md-4 pt-4">
+					• Artificial intelligence <br> • Software Engineering<br> • Big data Analytics<br> • Computer Networks<br> • Scientific Computing<br> • Wireless Sensor Networks<br> • Cloud Computing<br> • Grid Computing<br> • Expert Systems<br> • Digital Image Processing<br>					• Watermarking<br> • Information Retrieval<br> • Mobile Computing<br> • Multimedia Applications<br> • Security & Cryptography<br> • Software Engineering & CASE<br> • Soft Computing Applications in Power Systems<br> • Optimization in Power System
+					Modeling & Control<br> • Power System Stability and Switchgear and Protection<br> • Power Quality Issues and Solutions<br> • Diagnosis and sensing systems<br> • Pattern recognition<br> • Smart Grid
+				</div>
+				<div class="col-md-4 pt-4">
+					• VLSI/Embedded Systems<br> • Nano Technology and MEMS<br> • Nanoelectronics/Devices<br> • Photonic/Opto-Electronic Structures/Devices<br> • Digital Communication and Telecommunication <br> • Microprocessor based Technologies.<br> • Networking<br>					• Grid and Cloud Computing<br> • DNA and Mobile Computing<br> • High throughput Computing<br> • Data Structures & Algorithms<br> • Artificial Intelligence and Expert Systems<br> • Automated Software Engineering<br> • Bioinformatics and Scientific
+					Computing<br> • Computer Architecture and Embedded Systems<br> • Computer Graphics & Virtual Reality<br> • Computer Networks & Security& Cryptography<br> • Computer-aided Design/Manufacturing<br> • Data Compression, Data Encryption, Data Mining<br>					• Image Processing<br> • Distributed Systems
+				</div>
 			</div>
 		</div>
 	</section>
-	<!-- End Content Area -->
+	<!-- End Call Area -->
 
 	<footer class="section-full">
 		<div class="container">
