important dates finished

--- a/important-dates.html
+++ b/important-dates.html
@@ -15,7 +15,7 @@
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
-	<title>Speakers : ICAIECES - 2019</title>
+	<title>Importan Dates : ICAIECES - 2019</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,500,600" rel="stylesheet">
 	<!--
@@ -71,65 +71,49 @@
 	</header>
 	<!-- End Header Area -->
 
-	<!-- Start Registration Area -->
-	<section class="section-full gray-bg partial-p">
+	<!-- Start Important Dates Area -->
+	<section class="section-full gray-bg partial-p" style="height:100vh;">
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-lg-10">
 					<div class="section-title text-center">
-						<h1 class="text-uppercase">Payment Details</h1>
+						<h1 class="text-uppercase">Important Dates</h1>
 					</div>
 				</div>
 			</div>
-			<div class="row">
-				<table class="table">
-					<thead>
-						<tr>
-							<th scope="col">#</th>
-							<th scope="col">Category</th>
-							<th scope="col">Registration Fee</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<th scope="row">1</th>
-							<td>Indian Delegates Researcher / Student</td>
-							<td>INR 7500/-</td>
-						</tr>
-						<tr>
-							<th scope="row">2</th>
-							<td>Academic</td>
-							<td>INR 8000/-</td>
-						</tr>
-						<tr>
-							<th scope="row">3</th>
-							<td>Industrial</td>
-							<td>INR 8500/-</td>
-						</tr>
-						<tr>
-							<th scope="row">4</th>
-							<td>Foreign Delegates</td>
-							<td>USD $300</td>
-						</tr>
-						<tr>
-							<th scope="row">5</th>
-							<td>Foreign Students</td>
-							<td>USD $250</td>
-						</tr>
-					</tbody>
-				</table>
+			<div class="row justify-content-center">
+				<div class="col-lg-8">
+					<table class="table">
+						<thead>
+							<tr>
+								<th scope="col">#</th>
+								<th scope="col">Event</th>
+								<th scope="col">Date</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<th scope="row">1</th>
+								<td>Paper Submission</td>
+								<td>Januray 10th, 2019</td>
+							</tr>
+							<tr>
+								<th scope="row">2</th>
+								<td>Acceptance Notification</td>
+								<td>February 22nd, 2019</td>
+							</tr>
+							<tr>
+								<th scope="row">3</th>
+								<td>Registration and camera ready</td>
+								<td>March 10th, 2019</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
 			</div>
-			<h3 class="p-3">Registration Instructions</h3>
-			<p class="content-theme-2">
-				Registration Fee: It is mandatory for at least one author of an accepted paper to register in order for the paper to appear in the publication and included in the Technical Program.
-
-			</p>
-			<p class="content-theme-2">
-				Copyright Transfer: Accepted paper authors have to submit copyright transfer form for publication.
-			</p>
 		</div>
 	</section>
-	<!-- End Registration Area -->
+	<!-- End Important Dates Area -->
 
 	<footer class="section-full">
 		<div class="container">
