--- a/call.html
+++ b/call.html
@@ -50,6 +50,7 @@
 									<a class="dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">More</a>
 									<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 										<a class="dropdown-item" href="#">Paper Submission</a>
+										<a class="dropdown-item" href="./important-dates.html">Important Dates</a>
 										<a class="dropdown-item" href="./call.html">Call for Papers</a>
 										<a class="dropdown-item" href="#">Committee</a>
 										<div class="dropdown-divider"></div>
