venue and contact

--- a/contact.html
+++ b/contact.html
@@ -71,8 +71,8 @@
 	</header>
 	<!-- End Header Area -->
 
-	<!-- Start Call Area -->
-	<section class="section-full gray-bg partial-p">
+	<!-- Start Contact Area -->
+	<section class="section-full gray-bg partial-p" style="height:100vh;">
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-lg-10">
@@ -86,11 +86,11 @@
 					<h4 class="text-center">
 						+91 8778863135 <br><a href="http://srmuniv.ac.in" target="_blank">www.srmuniv.ac.in</a> 			<br><br>		</h4>
 				</div>
-				
+
 			</div>
 		</div>
 	</section>
-	<!-- End Call Area -->
+	<!-- End Contact Area -->
 
 	<footer class="section-full">
 		<div class="container">
