--- a/venue.html
+++ b/venue.html
@@ -54,8 +54,8 @@
 										<a class="dropdown-item" href="./call.html">Call for Papers</a>
 										<a class="dropdown-item" href="#">Committee</a>
 										<div class="dropdown-divider"></div>
-										<a class="dropdown-item" href="#">Venue</a>
-										<a class="dropdown-item" href="#">Contact</a>
+										<a class="dropdown-item" href="./venue.html">Venue</a>
+										<a class="dropdown-item" href="./contact.html">Contact</a>
 									</div>
 								</li>
 							</ul>
@@ -71,7 +71,7 @@
 	</header>
 	<!-- End Header Area -->
 
-	<!-- Start Call Area -->
+	<!-- Start Venue Area -->
 	<section class="section-full gray-bg partial-p">
 		<div class="container">
 			<div class="row justify-content-center">
@@ -86,18 +86,18 @@
 					<h4 class="text-center">
 						SRM Institute of Science and Technology:
 					</h4>
-					<div class="text-center">Potheri, Mahatma Gandhi Road,<br> SRM Nagar, Kattankulathur,<br> Tamil Nadu 603203<br><br>	
+					<div class="text-center">Potheri, Mahatma Gandhi Road,<br> SRM Nagar, Kattankulathur,<br> Tamil Nadu 603203<br><br>
 							<a href="https://www.google.co.in/maps/dir/''/srm+university/@12.8231353,79.9757615,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3a52f70d37c35faf:0x150be8ecf0c8f817!2m2!1d80.045802!2d12.8231446" target="_blank"><button class="btn btn-default">Get Directions</button></a>
 					</div>
 				</div>
 				<div class="col-md-8 col-sm-12 pt-4">
 					<div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=srm%20university%20potheri&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.pureblack.de">webseite erstellen lassen</a></div><style>.mapouter{text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>
 				</div>
-				
+
 			</div>
 		</div>
 	</section>
-	<!-- End Call Area -->
+	<!-- End Venue Area -->
 
 	<footer class="section-full">
 		<div class="container">
