--- a/about.html
+++ b/about.html
@@ -54,8 +54,8 @@
 										<a class="dropdown-item" href="./call.html">Call for Papers</a>
 										<a class="dropdown-item" href="#">Committee</a>
 										<div class="dropdown-divider"></div>
-										<a class="dropdown-item" href="#">Venue</a>
-										<a class="dropdown-item" href="#">Contact</a>
+										<a class="dropdown-item" href="./venue.html">Venue</a>
+										<a class="dropdown-item" href="./contact.html">Contact</a>
 									</div>
 								</li>
 							</ul>
