added publication page, fixed nav and more fixes

--- a/venue.html
+++ b/venue.html
@@ -44,15 +44,15 @@
 								<li><a href="./index.html">Home</a></li>
 								<li><a href="./about.html">About</a></li>
 								<li><a href="./speakers.html">Speakers</a></li>
+								<li><a href="#">Committee</a></li>
 								<li><a href="./registration.html">Registration</a></li>
-								<li><a href="#protfolio">Publication</a></li>
+								<li><a href="./publication.html">Publication</a></li>
 								<li class="dropdown">
 									<a class="dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">More</a>
 									<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+										<a class="dropdown-item" href="./call.html">Call for Papers</a>
 										<a class="dropdown-item" href="#">Paper Submission</a>
 										<a class="dropdown-item" href="./important-dates.html">Important Dates</a>
-										<a class="dropdown-item" href="./call.html">Call for Papers</a>
-										<a class="dropdown-item" href="#">Committee</a>
 										<div class="dropdown-divider"></div>
 										<a class="dropdown-item" href="./venue.html">Venue</a>
 										<a class="dropdown-item" href="./contact.html">Contact</a>
@@ -87,11 +87,15 @@
 						SRM Institute of Science and Technology:
 					</h4>
 					<div class="text-center">Potheri, Mahatma Gandhi Road,<br> SRM Nagar, Kattankulathur,<br> Tamil Nadu 603203<br><br>
-							<a href="https://www.google.co.in/maps/dir/''/srm+university/@12.8231353,79.9757615,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3a52f70d37c35faf:0x150be8ecf0c8f817!2m2!1d80.045802!2d12.8231446" target="_blank"><button class="btn btn-default">Get Directions</button></a>
+						<a href="https://www.google.co.in/maps/dir/''/srm+university/@12.8231353,79.9757615,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3a52f70d37c35faf:0x150be8ecf0c8f817!2m2!1d80.045802!2d12.8231446" target="_blank"><button class="btn btn-default">Get Directions</button></a>
 					</div>
 				</div>
 				<div class="col-md-8 col-sm-12 pt-4">
-					<div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=srm%20university%20potheri&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.pureblack.de">webseite erstellen lassen</a></div><style>.mapouter{text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>
+					<div class="mapouter">
+						<div class="gmap_canvas">
+							<iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=srm%20university%20potheri&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+						</div>
+					</div>
 				</div>
 
 			</div>
