--- a/about.html
+++ b/about.html
@@ -44,15 +44,15 @@
 								<li><a href="./index.html">Home</a></li>
 								<li><a href="./about.html">About</a></li>
 								<li><a href="./speakers.html">Speakers</a></li>
+								<li><a href="#">Committee</a></li>
 								<li><a href="./registration.html">Registration</a></li>
-								<li><a href="#protfolio">Publication</a></li>
+								<li><a href="./publication.html">Publication</a></li>
 								<li class="dropdown">
 									<a class="dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">More</a>
 									<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+										<a class="dropdown-item" href="./call.html">Call for Papers</a>
 										<a class="dropdown-item" href="#">Paper Submission</a>
 										<a class="dropdown-item" href="./important-dates.html">Important Dates</a>
-										<a class="dropdown-item" href="./call.html">Call for Papers</a>
-										<a class="dropdown-item" href="#">Committee</a>
 										<div class="dropdown-divider"></div>
 										<a class="dropdown-item" href="./venue.html">Venue</a>
 										<a class="dropdown-item" href="./contact.html">Contact</a>
@@ -151,7 +151,11 @@
 				</div>
 				<div class="col-md-8">
 					<p class="content-theme-2">
-						The Research Division of Software Engineering Department covers various aspects of Computer Vision, Software Process & Engineering, Network Systems & Services and Computing Technologies. The key player for this conference is the Computer Vision research group working in major research fields of Artificial Intelligence, Big Data Analytics, IoT, Machine & Deep Learning, Image Processing, Augmented Reality and Robotics. The Networking Systems and Services group graft on research areas such as Wireless Sensor Networks, Adhoc Networks, VANET and Security. Computing Technologies group concentrates on Data Mining, Analysis and Prediction, Human Computer Interface, Virtual Reality, Brain Computing, Distributed Computing, Social Media Network, Mobile and Pervasive Computing. There is an active and growing area of research in the field Software Engineering as Measurements, Metric, Testing, Verification & Validation and Reliability, whilst collaborating with each other and a variety of industrial partners like LDRA.
+						The Research Division of Software Engineering Department covers various aspects of Computer Vision, Software Process & Engineering, Network Systems & Services and Computing Technologies. The key player for this conference is the Computer Vision research
+						group working in major research fields of Artificial Intelligence, Big Data Analytics, IoT, Machine & Deep Learning, Image Processing, Augmented Reality and Robotics. The Networking Systems and Services group graft on research areas such as Wireless
+						Sensor Networks, Adhoc Networks, VANET and Security. Computing Technologies group concentrates on Data Mining, Analysis and Prediction, Human Computer Interface, Virtual Reality, Brain Computing, Distributed Computing, Social Media Network, Mobile
+						and Pervasive Computing. There is an active and growing area of research in the field Software Engineering as Measurements, Metric, Testing, Verification & Validation and Reliability, whilst collaborating with each other and a variety of industrial
+						partners like LDRA.
 					</p>
 				</div>
 				<div class="col-md-12 pt-5">
@@ -159,7 +163,8 @@
 						<h1 class="text-uppercase">Industrial connection</h1>
 					</div>
 					<p class="content-theme-2">
-						Software Engineering program interacts and liaises with well-reputed industries to facilitate funded projects, research and consultancy in the chosen areas. The Program  Corporate Advisory Board includes top executives from leading Software Industries such as Amazon, Pyoda, Aricent, McAfee, Capital IQ, NTT data, Ascendas, etc. Industrial partnership with Clockworks Interview was created as MOU.
+						Software Engineering program interacts and liaises with well-reputed industries to facilitate funded projects, research and consultancy in the chosen areas. The Program Corporate Advisory Board includes top executives from leading Software Industries
+						such as Amazon, Pyoda, Aricent, McAfee, Capital IQ, NTT data, Ascendas, etc. Industrial partnership with Clockworks Interview was created as MOU.
 					</p>
 				</div>
 			</div>
