--- a/contact.html
+++ b/contact.html
@@ -44,15 +44,15 @@
 								<li><a href="./index.html">Home</a></li>
 								<li><a href="./about.html">About</a></li>
 								<li><a href="./speakers.html">Speakers</a></li>
+								<li><a href="#">Committee</a></li>
 								<li><a href="./registration.html">Registration</a></li>
-								<li><a href="#protfolio">Publication</a></li>
+								<li><a href="./publication.html">Publication</a></li>
 								<li class="dropdown">
 									<a class="dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">More</a>
 									<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+										<a class="dropdown-item" href="./call.html">Call for Papers</a>
 										<a class="dropdown-item" href="#">Paper Submission</a>
 										<a class="dropdown-item" href="./important-dates.html">Important Dates</a>
-										<a class="dropdown-item" href="./call.html">Call for Papers</a>
-										<a class="dropdown-item" href="#">Committee</a>
 										<div class="dropdown-divider"></div>
 										<a class="dropdown-item" href="./venue.html">Venue</a>
 										<a class="dropdown-item" href="./contact.html">Contact</a>
@@ -84,9 +84,9 @@
 			<div class="row justify-content-center">
 				<div class="col-md-12">
 					<h4 class="text-center">
-						+91 8778863135 <br><a href="http://srmuniv.ac.in" target="_blank">www.srmuniv.ac.in</a> 			<br><br>		</h4>
+						+91 8778863135 <br><a href="http://srmuniv.ac.in" target="_blank">www.srmuniv.ac.in</a><br><br>
+					</h4>
 				</div>
-
 			</div>
 		</div>
 	</section>
