--- a/speakers.html
+++ b/speakers.html
@@ -44,15 +44,15 @@
 								<li><a href="./index.html">Home</a></li>
 								<li><a href="./about.html">About</a></li>
 								<li><a href="./speakers.html">Speakers</a></li>
+								<li><a href="#">Committee</a></li>
 								<li><a href="./registration.html">Registration</a></li>
-								<li><a href="#protfolio">Publication</a></li>
+								<li><a href="./publication.html">Publication</a></li>
 								<li class="dropdown">
 									<a class="dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">More</a>
 									<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+										<a class="dropdown-item" href="./call.html">Call for Papers</a>
 										<a class="dropdown-item" href="#">Paper Submission</a>
 										<a class="dropdown-item" href="./important-dates.html">Important Dates</a>
-										<a class="dropdown-item" href="./call.html">Call for Papers</a>
-										<a class="dropdown-item" href="#">Committee</a>
 										<div class="dropdown-divider"></div>
 										<a class="dropdown-item" href="./venue.html">Venue</a>
 										<a class="dropdown-item" href="./contact.html">Contact</a>
