--- a/index.html
+++ b/index.html
@@ -102,7 +102,27 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4">
-					<img src="./img/swea.png" class="img-fluid" alt="">
+					<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+								<img class="d-block w-100" src="http://via.placeholder.com/350x350" alt="First slide">
+							</div>
+							<div class="carousel-item">
+								<img class="d-block w-100" src="http://via.placeholder.com/350x350" alt="Second slide">
+							</div>
+							<div class="carousel-item">
+								<img class="d-block w-100" src="http://via.placeholder.com/350x350" alt="Third slide">
+							</div>
+						</div>
+						<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+						    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						    <span class="sr-only">Previous</span>
+						  </a>
+						<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+						    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+						    <span class="sr-only">Next</span>
+						  </a>
+					</div>
 				</div>
 				<div class="col-md-8">
 					<p class="content-theme-1">
