committee page and other changes

--- a/about.html
+++ b/about.html
@@ -62,7 +62,8 @@
 							<a href="#" class="mobile-btn"><span class="lnr lnr-menu"></span></a>
 						</nav>
 						<div class="header-social d-flex align-items-center">
-							<a href="#top" class="smooth"><img src="img/springer.png" width="200px" alt=""></a>
+							<a href="#top" class="smooth"><img src="img/springer.png" width="200px" alt=""><br><div class="yettobe"><b>(Yet To be approved)</b></div>
+							</a>
 						</div>
 					</div>
 				</div>
@@ -92,7 +93,7 @@
 					</p>
 				</div>
 				<div class="col-md-12 pt-5">
-					<p class="content-theme-2">
+					<p class="content-theme-1">
 						SRM group of institutions are span across India with 4 main campuses and 7 other groups of institution attracting students both from India and Abroad. Academically SRM offers global faculty members, flexible and dynamic curriculum, exciting research and
 						global connections are features that set SRM apart. SRM frontrunners are their Internal and Corporate Advisory Board who play a key role in formulating academic and research after interaction with faculties and students. <br /><br /> SRMIST
 						research covers all major academic disciplines to establish state of the art multi-disciplinary, inter-disciplinary and co-disciplinary research institute in a dynamic, competitive and vibrant environment. SRMIST has key facilities like Nano Technology
@@ -150,7 +151,7 @@
 					<img src="./img/research.png" class="img-fluid" alt="">
 				</div>
 				<div class="col-md-8">
-					<p class="content-theme-2">
+					<p class="content-theme-1">
 						The Research Division of Software Engineering Department covers various aspects of Computer Vision, Software Process & Engineering, Network Systems & Services and Computing Technologies. The key player for this conference is the Computer Vision research
 						group working in major research fields of Artificial Intelligence, Big Data Analytics, IoT, Machine & Deep Learning, Image Processing, Augmented Reality and Robotics. The Networking Systems and Services group graft on research areas such as Wireless
 						Sensor Networks, Adhoc Networks, VANET and Security. Computing Technologies group concentrates on Data Mining, Analysis and Prediction, Human Computer Interface, Virtual Reality, Brain Computing, Distributed Computing, Social Media Network, Mobile
@@ -162,7 +163,7 @@
 					<div class="section-title text-center">
 						<h1 class="text-uppercase">Industrial connection</h1>
 					</div>
-					<p class="content-theme-2">
+					<p class="content-theme-1">
 						Software Engineering program interacts and liaises with well-reputed industries to facilitate funded projects, research and consultancy in the chosen areas. The Program Corporate Advisory Board includes top executives from leading Software Industries
 						such as Amazon, Pyoda, Aricent, McAfee, Capital IQ, NTT data, Ascendas, etc. Industrial partnership with Clockworks Interview was created as MOU.
 					</p>
