other committees pages add

--- a/committee.html
+++ b/committee.html
@@ -87,11 +87,11 @@
 				<div class="row justify-content-center">
 					<div class="col-md-6 col-sm-12 committee-card chiefpatron">
 						<h3>Chief Patron</h3>
-						<br><p>Click here to view Chief Patrons.</p>
+						<br><p>Click <a href="chief_patron.html">here</a> to view Chief Patrons.</p>
 					</div>
 					<div class="col-md-6 col-sm-12 committee-card patroncard">
 						<h3>Patrons</h3>
-						<br><p>Click here to view Patrons.</p>
+						<br><p>Click <a href="patrons.html">here</a> to view Patrons.</p>
 					</div>
 				</div>
 				<div class="row justify-content-center">
@@ -117,41 +117,41 @@
 				<div class="row justify-content-center">
 					<div class="col-md-6 col-sm-12 committee-card">
 						<h3>Program Chair</h3>
-						<br><p>Click here to view Program Chair.</p>
+						<br><p>Click <a href="program_chair.html">here</a> to view Program Chair.</p>
 					</div>
 					<div class="col-md-6 col-sm-12 committee-card">
 						<h3>Program Co-Chair</h3>
-						<br><p>Click here to view Program Co-Chair.</p>
+						<br><p>Click <a href="program_co.html">here</a> to view Program Co-Chair.</p>
 					</div>
 				</div>
 				<div class="row justify-content-center">
 					<div class="col-md-6 col-sm-12 committee-card">
 						<h3>Publicity Chair</h3>
-						<br><p>Click here to view Publicity Chair.</p>
+						<br><p>Click <a href="publicity.html">here</a> to view Publicity Chair.</p>
 					</div>
 					<div class="col-md-6 col-sm-12 committee-card">
 						<h3>Public Relation Chair</h3>
-						<br><p>Click here to view Public Relation Chair.</p>
+						<br><p>Click <a href="pr.html">here</a> to view Public Relation Chair.</p>
 					</div>
 				</div>
 				<div class="row justify-content-center">
 					<div class="col-md-6 col-sm-12 committee-card">
 						<h3>Publication Chair</h3>
-						<br><p>Click here to view Publication Chair.</p>
+						<br><p>Click <a href="publication_chair.html">here</a> to view Publication Chair.</p>
 					</div>
 					<div class="col-md-6 col-sm-12 committee-card">
 						<h3>Finance Chair</h3>
-						<br><p>Click here to view Finance Chair.</p>
+						<br><p>Click <a href="finance.html">here</a> to view Finance Chair.</p>
 					</div>
 				</div>
 				<div class="row justify-content-center">
 					<div class="col-md-6 col-sm-12 committee-card">
 						<h3>Organising Committee</h3>
-						<br><p>Click here to view Organising Committee.</p>
+						<br><p>Click <a href="oc.html">here</a> to view Organising Committee.</p>
 					</div>
 					<div class="col-md-6 col-sm-12 committee-card">
 						<h3>International/National Advisory Committee</h3>
-						<br><p>Click here to view International/National Advisory Committee.</p>
+						<br><p>Click <a href="advisory.html">here</a> to view International/National Advisory Committee.</p>
 					</div>
 				</div>
 			</div>
@@ -171,8 +171,8 @@
         </div>
         <div class="modal-body">
           <p><b>Dr. T. R. Paari Vendhar, Chancellor, SRMIST, India.
-Mr. Ravi Pachamoothoo, Chairman, SRM Group, India.<br>
-Mr. P. Sathyanarayanan, President, SRMIST, India. <Br>
+Prof. Ravi Pachamoothoo, Chairman, SRM Group, India.<br>
+Prof. P. Sathyanarayanan, President, SRMIST, India. <Br>
 Dr. R. Shivakumar, Vice President, SRMIST, India.<br></b>
 </p>
         </div>
