--- a/organising.html
+++ b/organising.html
@@ -87,7 +87,7 @@
 				<div class="row justify-content-center ">
 					<div class="col-md-7 col-sm-12 com_names animated slideInRight">
         <span class="glyphicon glyphicon-user"></span>  Dr. C. Lakshmi, SRMIST, Chennai, India <br> 
-     <span class="glyphicon glyphicon-user"></span>  Mr. V. Sivakumar, SRMIST, Chennai, India<br>
+     <span class="glyphicon glyphicon-user"></span>  Prof. V. Sivakumar, SRMIST, Chennai, India<br>
 
 
 					</div>
