--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 								<li><a href="./index.html">Home</a></li>
 								<li><a href="./about.html">About</a></li>
 								<li><a href="./speakers.html">Speakers</a></li>
-								<li><a href="#">Committee</a></li>
+								<li><a href="./committee.html">Committee</a></li>
 								<li><a href="./registration.html">Registration</a></li>
 								<li><a href="./publication.html">Publication</a></li>
 								<li class="dropdown">
