--- a/chief_patron.html
+++ b/chief_patron.html
@@ -15,7 +15,7 @@
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
-	<title>Organising Co-Chair</title>
+	<title>Chief Patron</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,500,600" rel="stylesheet">
 	<!--
@@ -79,18 +79,19 @@
 			<div class="row justify-content-center">
 				<div class="col-lg-10">
 					<div class="section-title text-center">
-						<h1 class="text-uppercase">Organising Co-Chair</h1>
+						<h1 class="text-uppercase">Chief Patron</h1>
 					</div>
 				</div>
 			</div>
 			<div class="container">
 				<div class="row justify-content-center ">
-					<div class="col-md-7 col-sm-12 com_names animated slideInRight">
-       
-     					<span class="glyphicon glyphicon-user"></span> Prof. S. Karthik, SRMIST, Chennai, India <br>
-<span class="glyphicon glyphicon-user"></span> Prof. G. Senthil kumar, SRMIST, Chennai, India<br>
-<span class="glyphicon glyphicon-user"></span> Prof. T. S. Shiny angel, SRMIST, Chennai, India<br>
+					<div class="col-md-7 col-sm-12 com_names hfix animated slideInRight">
 
+
+<span class="glyphicon glyphicon-user"></span>Dr. T. R. Paari Vendhar, Chancellor, SRMIST, India.<br>
+<span class="glyphicon glyphicon-user"></span>Mr. Ravi Pachamoothoo, Chairman, SRM Group, India.<br>
+<span class="glyphicon glyphicon-user"></span>Mr. P. Sathyanarayanan, President, SRMIST, India. <br>
+<span class="glyphicon glyphicon-user"></span>Dr. R. Shivakumar, Vice President, SRMIST, India.<Br>
 
 					</div>
 				</div>
