--- a/program_chair.html
+++ b/program_chair.html
@@ -15,7 +15,7 @@
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
-	<title>Organising Co-Chair</title>
+	<title>Program Chair</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,500,600" rel="stylesheet">
 	<!--
@@ -79,7 +79,7 @@
 			<div class="row justify-content-center">
 				<div class="col-lg-10">
 					<div class="section-title text-center">
-						<h1 class="text-uppercase">Organising Co-Chair</h1>
+						<h1 class="text-uppercase">Program Chair</h1>
 					</div>
 				</div>
 			</div>
@@ -87,9 +87,8 @@
 				<div class="row justify-content-center ">
 					<div class="col-md-7 col-sm-12 com_names animated slideInRight">
        
-     					<span class="glyphicon glyphicon-user"></span> Prof. S. Karthik, SRMIST, Chennai, India <br>
-<span class="glyphicon glyphicon-user"></span> Prof. G. Senthil kumar, SRMIST, Chennai, India<br>
-<span class="glyphicon glyphicon-user"></span> Prof. T. S. Shiny angel, SRMIST, Chennai, India<br>
+     					
+<span class="glyphicon glyphicon-user"></span>     Dr. C. Lakshmi, SRMIST, Chennai, India  <br>
 
 
 					</div>
