Call for papers changes

--- a/call.html
+++ b/call.html
@@ -62,7 +62,8 @@
 							<a href="#" class="mobile-btn"><span class="lnr lnr-menu"></span></a>
 						</nav>
 						<div class="header-social d-flex align-items-center">
-							<a href="#top" class="smooth"><img src="img/springer.png" width="200px" alt=""></a>
+							<a href="#top" class="smooth"><img src="img/springer.png" width="200px" alt=""><br><div class="yettobe"><b>(Yet To be approved)</b></div>
+							</a>
 						</div>
 					</div>
 				</div>
@@ -88,12 +89,10 @@
 					</h4>
 				</div>
 				<div class="col-md-4 pt-4">
-					• Artificial intelligence <br> • Software Engineering<br> • Big data Analytics<br> • Computer Networks<br> • Scientific Computing<br> • Wireless Sensor Networks<br> • Cloud Computing<br> • Grid Computing<br> • Expert Systems<br> • Digital Image Processing<br>					• Watermarking<br> • Information Retrieval<br> • Mobile Computing<br> • Multimedia Applications<br> • Security & Cryptography<br> • Software Engineering & CASE<br> • Soft Computing Applications in Power Systems<br> • Optimization in Power System
-					Modeling & Control<br> • Power System Stability and Switchgear and Protection<br> • Power Quality Issues and Solutions<br> • Diagnosis and sensing systems<br> • Pattern recognition<br> • Smart Grid
+					• Artificial intelligence <br> • Software Engineering<br>• Ubiquitos Computing <br> • Big data Analytics<br> • Computer Networks<br> • Scientific Computing<br> • Wireless Sensor Networks<br> • Pervasive Computing<br>• Evalutionary Computing<br> • Grid and Cloud Computing<br> • Internet of Things<br> • Digital Image Processing<br>					• Watermarking<br> • Information Retrieval<br> • Mobile Computing<br> • Multimedia Applications<br> 
 				</div>
 				<div class="col-md-4 pt-4">
-					• VLSI/Embedded Systems<br> • Nano Technology and MEMS<br> • Nanoelectronics/Devices<br> • Photonic/Opto-Electronic Structures/Devices<br> • Digital Communication and Telecommunication <br> • Microprocessor based Technologies.<br> • Networking<br>					• Grid and Cloud Computing<br> • DNA and Mobile Computing<br> • High throughput Computing<br> • Data Structures & Algorithms<br> • Artificial Intelligence and Expert Systems<br> • Automated Software Engineering<br> • Bioinformatics and Scientific
-					Computing<br> • Computer Architecture and Embedded Systems<br> • Computer Graphics & Virtual Reality<br> • Computer Networks & Security& Cryptography<br> • Computer-aided Design/Manufacturing<br> • Data Compression, Data Encryption, Data Mining<br>					• Image Processing<br> • Distributed Systems
+					• Simulation and Optimization<br> • Decision and Support System<br> • Game Theory<br> • Microprocessor based Technologies.<br>  • Data Structures & Algorithms<br>• Automated Software Engineering<br> • Bioinformatics<br> • Computer Graphics & Virtual Reality<br> • Image Analysing<br> • Pattern Recognition<br> • Computer Aided Design/Manufacturing<br>	 • Distributed Systems <br>• Internet and Web Applications<br>• Security and Cryptography<br>• Embedded Software Engineering <br>• Soft Computing Applications in Diagnosis and sensing systems
 				</div>
 			</div>
 		</div>
