publication page content change

--- a/publication.html
+++ b/publication.html
@@ -62,7 +62,8 @@
 							<a href="#" class="mobile-btn"><span class="lnr lnr-menu"></span></a>
 						</nav>
 						<div class="header-social d-flex align-items-center">
-							<a href="#top" class="smooth"><img src="img/springer.png" width="200px" alt=""></a>
+							<a href="#top" class="smooth"><img src="img/springer.png" width="200px" alt=""><br><div class="yettobe"><b>(Yet To be approved)</b></div>
+							</a>
 						</div>
 					</div>
 				</div>
@@ -83,7 +84,7 @@
 			</div>
 			<div class="row justify-content-center">
 				<div class="col-md-12">
-					<h4 class="text-center" style="font-weight:20;">The selected original papers presented in the conference will be published in Springer series <b>"Advances in Intelligent Systems and Computing" (AISC). [Pending Approval]</b></h4>
+					<h4 class="text-center" style="font-weight:20;">Springer - The selected original papers presented in the conference will be published in Springer series <b>"Advances in Intelligent Systems and Computing" (AISC). [Pending Approval](Spocus Indexed)</b></h4>
 				</div>
 			</div>
 		</div>
