Mr./Mrs. changed to Prof.

--- a/finance.html
+++ b/finance.html
@@ -90,7 +90,7 @@
 
 
 <span class="glyphicon glyphicon-user"></span>Ms. Sasi Rekha Sankar, SRMIST, Chennai, India<br>
-<span class="glyphicon glyphicon-user"></span>Mr. S. Selva kumara samy, SRMIST, Chennai, India<br>
+<span class="glyphicon glyphicon-user"></span>Prof. S. Selva kumara samy, SRMIST, Chennai, India<br>
 
 
 					</div>
