--- a/oc.html
+++ b/oc.html
@@ -88,15 +88,15 @@
 					<div class="col-md-7 col-sm-12 com_names hfix animated slideInRight">
 
 
- <span class="glyphicon glyphicon-user"></span>  Mrs. M. Uma, SRMIST, Chennai, India<br>
-<span class="glyphicon glyphicon-user"></span>Mrs.  M. S. Abirami, SRMIST, Chennai, India <br>
-<span class="glyphicon glyphicon-user"></span>Mr. K.Vijayakumar, SRMIST, Chennai, India<br>
-<span class="glyphicon glyphicon-user"></span>Mrs. D. Anitha, SRMIST, Chennai, India<br>
-<span class="glyphicon glyphicon-user"></span>Mrs. S. Aruna sankaralingam, SRMIST, Chennai, India<br>
-<span class="glyphicon glyphicon-user"></span>Mrs. J. Jeyasudha, SRMIST, Chennai, India<br>
-<span class="glyphicon glyphicon-user"></span>Mrs. S. Amudha, SRMIST, Chennai, India<br>
-<span class="glyphicon glyphicon-user"></span>   Mrs. B. Jothi, SRMIST, Chennai, India<br>
-<span class="glyphicon glyphicon-user"></span>Mr. C. Arun  , SRMIST, Chennai, India.<br>
+ <span class="glyphicon glyphicon-user"></span>  Prof. M. Uma, SRMIST, Chennai, India<br>
+<span class="glyphicon glyphicon-user"></span>Prof.  M. S. Abirami, SRMIST, Chennai, India <br>
+<span class="glyphicon glyphicon-user"></span>Prof. K.Vijayakumar, SRMIST, Chennai, India<br>
+<span class="glyphicon glyphicon-user"></span>Prof. D. Anitha, SRMIST, Chennai, India<br>
+<span class="glyphicon glyphicon-user"></span>Prof. S. Aruna sankaralingam, SRMIST, Chennai, India<br>
+<span class="glyphicon glyphicon-user"></span>Prof. J. Jeyasudha, SRMIST, Chennai, India<br>
+<span class="glyphicon glyphicon-user"></span>Prof. S. Amudha, SRMIST, Chennai, India<br>
+<span class="glyphicon glyphicon-user"></span>   Prof. B. Jothi, SRMIST, Chennai, India<br>
+<span class="glyphicon glyphicon-user"></span>Prof. C. Arun  , SRMIST, Chennai, India.<br>
 
 
 					</div>
