--- a/pr.html
+++ b/pr.html
@@ -89,7 +89,7 @@
 
 
     <span class="glyphicon glyphicon-user"></span>  Dr. Sridhar Krishnaswamy, SRMIST,  Chennai, India<br>
-<span class="glyphicon glyphicon-user"></span> Mr. V. Haribaabu, SRMIST, Chennai, India<br>
+<span class="glyphicon glyphicon-user"></span> Prof. V. Haribaabu, SRMIST, Chennai, India<br>
 
 
 
